# sculptor

./: .gitignore  README.md  conda_requirements.yml  environment.yml  license.md  note.txt  requirements.txt  setup.cfg  setup.py  setup_old.py
docs/dep_v1/source/: conf.py  (+5 more)
docs/source/: conf.py  first_fit.rst  getting_started.rst  index.rst  installation.rst  scripting_sculptor_1.nblink  speconed.rst  spectrum_preparation.nblink
examples/: example_fit_analysis_script.py  example_fit_setup_script.py  example_mcmc_analysis_script.py  example_mcmc_fit_script.py  test_saving.py
examples/dep_v1/: example_fit_analysis_script.py  example_fit_setup_script.py  example_mcmc_analysis_script.py
examples/example_spectrum_fit/: 0_PL__model.json  0_fitresult.json  1_SiIV__model.json  1_fitresult.json  2_CIV_A__model.json  2_CIV_B__model.json  2_fitresult.json  3_AlIII__model.json  3_CIII__model.json  3_SiIII__model.json  3_fitresult.json  3_global_params.json  4_AbsA__model.json  4_AbsB__model.json  4_fitresult.json
examples/notebooks/: scripting_sculptor_1.ipynb  scripting_sculptor_2.ipynb  scripting_sculptor_3.ipynb  speconed_demonstration.ipynb  spectrum_preparation.ipynb
sculptor/: __init__.py  analysis.py  colors.py  component.py  masksmodels.py  menu_dialogs.py  model.py  parameter.py  plot.py  prior.py  sculptor  specanalysis.py  specfit.py  specfitcanvas.py  specfitgui.py  specmodel.py  specmodelcanvas.py  specmodelwidget.py  speconed.py
sculptor-extensions/: my_extension.py  qso.py
sculptor/dep_v1/: masksmodels.py  specanalysis.py  specfit.py  specfitgui.py  specmodel.py  speconed.py
sculptor/models_and_masks/: basic.py  quasar.py
sculptor/scripts/: run_sculptor  run_sculptor.py
sculptor_extensions/: __init__.py  my_extension.py  qso.py
(+13 files in other folders)
