[metadata]
name = sculptor
version = attr: sculptor.__version__
author = Jan-Torge Schindler
author_email = schindler@hs.uni-hamburg.de
description = Interactive modeling of (electromagnetic) astronomical spectra
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = http://github.com/jtschindler/sculptor
project_urls =
    Bug Tracker = http://github.com/jtschindler/sculptor/issues
license = BSD-3-Clause
keywords =
    Sculptor
    astronomy
    spectroscopy
    modeling
    fitting
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find:
python_requires = >= 3.9
include_package_data = True
install_requires =
    importlib_resources
    numpy
    scipy
    astropy
    matplotlib
    pandas
    ipython
    jupyter
    tqdm
    fastparquet
    h5py
    pyyaml
;    tables
;    PyQt5
    nbsphinx
    nbsphinx-link
    emcee
    corner
    extinction
    tqdm
    lmfit
    linetools
    spectres

scripts =
    sculptor/scripts/run_sculptor


requirement_files =
    requirements.txt

;[options.package.data]
;* = sculptor/data/*, sculptor/data/*/*, sculptor/data/*/*/*, sculptor/data/*/*/*/*, sculptor/data/*/*/*/*/*,

;[options.entry.points]

[options.packages.find]
exclude =
    examples*
    docs*